--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           console.log(response)
           $("#city").empty()
           console.log(response.name)
-          $("#city").append(response.name + " (" + new Date().getMonth() + "/" + new Date().getDate() + "/" + new Date().getFullYear() + ")")
+          $("#city").append(response.name + " (" + (new Date().getMonth() + 1) + "/" + new Date().getDate() + "/" + new Date().getFullYear() + ")")
           document.getElementById("city")
           $("#temperature").empty()
           $("#temperature").text("Temperature: ")
