--- a/index.html
+++ b/index.html
@@ -43,7 +43,19 @@
 
 @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
   #five-Day-Forecast .card {
-    width: 15% !important
+    width: 15% !important;
+    font-size: 80%;
+    height: 14rem !important
+  }
+  .card-text {
+    position: relative;
+    top: 20px;
+  }
+  #date1, #date2, #date3, #date4, #date5 {
+    font-size: 150%;
+  }
+  body {
+    height: 10%;
   }
 }
 
