--- a/index.html
+++ b/index.html
@@ -6,61 +6,7 @@
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <style>
-      #citySearch {
-    width: 500px;
-}
-
-#date1, #date2, #date3, #date4, #date5 {
-    text-align: center;
-}
-
-#five-Day-Forecast {
-    margin-left: 130px;
-    font-weight: bold;
-}
-
-#searchBar {
-    margin-left: 220px;
-}
-
-#currentConditions {
-    margin-left: 130px;
-}
-
-#searchLabel {
-    color: white;
-}
-
-.card-body {
-  position: relative;
-  bottom: 50px;
-}
-
-.form-group {
-  text-align: center;
-}
-
-@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
-  #five-Day-Forecast .card {
-    width: 15% !important;
-    font-size: 80%;
-    height: 14rem !important
-  }
-  .card-text {
-    position: relative;
-    top: 20px;
-  }
-  #date1, #date2, #date3, #date4, #date5 {
-    font-size: 150%;
-  }
-  body {
-    height: 10%;
-  }
-}
-
-
-    </style>
+    <link rel="stylesheet" href="weatherDashboardCSS.css">
   </head>
 <body>
   <div class="container">
