--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div>
         <form>
           <div class="form-group">
-            <h6 id="searchLabel">Search for a city</h6>
-            <input type="text" onkeydown="uniKeyCode(event)" id="citySearch" aria-describedby="citySearch">
+            <h6 id="searchLabel">Search for a city name</h6>
+            <input type="text" placeholder="eg. Atlanta"onkeydown="uniKeyCode(event)" id="citySearch" aria-describedby="citySearch">
             <button type="submit" id="submitButton" form="form1" value="Submit">Search <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
               <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
@@ -80,6 +80,9 @@
         </div>
       </div>
     </div>
+    <footer>
+      <p id="footer">Henry Liu 2020</p>
+    </footer>
       <script type="text/javascript">
 
       $(document).ready(function() {
