--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ $(document).ready(function() {
 				url: d,
 				method: "GET"
 			}).then(function(a) {
-				$("#uv-index").empty(), $("#uv-index").text("UV Index: "), console.log(a.current.uvi), $("#uv-index").append(a.current.uvi), 0 < a.current.uvi && 3 > a.current.uvi ? $("#uv-index").css("background-color", "green") : 3 < a.current.uvi && 7 > a.current.uvi ? $("#uv-index").css("background-color", "orange") : 7 < a.current.uvi && $("#uv-index").css("background-color", "red");
+				$("#uv-index").empty(), $("#uv-index").text("UV Index: "), console.log(a.current.uvi), $("#uv-index").append(a.current.uvi), 0 < a.current.uvi && 3 > a.current.uvi ? $("#uv-index").css("background-color": "green","width":"30%") : 3 < a.current.uvi && 7 > a.current.uvi ? $("#uv-index").css("background-color": "orange", "width": "30%") : 7 < a.current.uvi && $("#uv-index").css("background-color": "red", "width": "30%");
 				var b = $("#city").text(),
 					c = $("#temperature").text(),
 					d = $("#humidity").text(),
