--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ $(document).ready(function() {
 			a.preventDefault();
 			var c = $("#citySearch").val();
 			$.ajax({
-				url: "https://api.openweathermap.org/data/2.5/weather?q=" + c + "&appid=f871a027e70e3de0c87c50b616b75c14",
+				url: "http://api.openweathermap.org/data/2.5/weather?q=" + c + "&appid=f871a027e70e3de0c87c50b616b75c14",
 				method: "GET"
 			}).then(function(a) {
 				console.log(a), $("#city").empty(), console.log(a.name), $("#city").append(a.name + " (" + (new Date().getMonth() + 1) + "/" + new Date().getDate() + "/" + new Date().getFullYear() + ")"), document.getElementById("city"), $("#temperature").empty(), $("#temperature").text("Current Temperature: "), console.log(a.main.temp);
@@ -158,7 +158,7 @@ $(document).ready(function() {
 					}))
 				})
 			}), $.ajax({
-				url: "https://api.openweathermap.org/data/2.5/forecast?q=" + c + "&appid=f871a027e70e3de0c87c50b616b75c14",
+				url: "http://api.openweathermap.org/data/2.5/forecast?q=" + c + "&appid=f871a027e70e3de0c87c50b616b75c14",
 				method: "GET"
 			}).then(function(a) {
 				console.log(a.list[8].main.temp);
@@ -189,7 +189,7 @@ $(document).ready(function() {
 	}), $("#submitButton").on("click", function() {
 		var a = $("#citySearch").val();
 		$.ajax({
-			url: "https://api.openweathermap.org/data/2.5/weather?q=" + a + "&appid=f871a027e70e3de0c87c50b616b75c14",
+			url: "http://api.openweathermap.org/data/2.5/weather?q=" + a + "&appid=f871a027e70e3de0c87c50b616b75c14",
 			method: "GET"
 		}).then(function(a) {
 			console.log(a), $("#city").empty(), console.log(a.name), $("#city").append(a.name + " (" + (new Date().getMonth() + 1) + "/" + new Date().getDate() + "/" + new Date().getFullYear() + ")"), document.getElementById("city"), $("#temperature").empty(), $("#temperature").text("Current Temperature: "), console.log(a.main.temp);
@@ -251,7 +251,7 @@ $(document).ready(function() {
 				}))
 			})
 		}), $.ajax({
-			url: "https://api.openweathermap.org/data/2.5/forecast?q=" + a + "&appid=f871a027e70e3de0c87c50b616b75c14",
+			url: "http://api.openweathermap.org/data/2.5/forecast?q=" + a + "&appid=f871a027e70e3de0c87c50b616b75c14",
 			method: "GET"
 		}).then(function(a) {
 			console.log(a.list[8].main.temp);
