--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="card bg-info" id="card2" style="width: 10rem; margin: 5px; height: 16rem;">
           <h3 id="date2"></h3>
-          <img id="img2" src="..." class="card-img-top" alt="...">
+          <img id="img2" src="" class="card-img-top" alt="...">
           <div class="card-body">
             <p id="temp2" class="card-text"></p>
             <p id="hum2" class="card-text"></p>
@@ -60,7 +60,7 @@
         </div>
         <div class="card bg-info" id="card3" style="width: 10rem; margin: 5px; height: 16rem;">
           <h3 id="date3"></h3>
-          <img id="img3" src="..." class="card-img-top" alt="...">
+          <img id="img3" src="" class="card-img-top" alt="...">
           <div class="card-body">
             <p id="temp3" class="card-text"></p>
             <p id="hum3" class="card-text"></p>
@@ -68,7 +68,7 @@
         </div>
         <div class="card bg-info" id="card4" style="width: 10rem; margin: 5px; height: 16rem;">
           <h3 id="date4"></h3>
-          <img id="img4" src="..." class="card-img-top" alt="...">
+          <img id="img4" src="" class="card-img-top" alt="...">
           <div class="card-body">
             <p id="temp4" class="card-text"></p>
             <p id="hum4" class="card-text"></p>
@@ -76,7 +76,7 @@
         </div>
         <div class="card bg-info" id="card5" style="width: 10rem; margin: 5px; height: 16rem;">
           <h3 id="date5"></h3>
-          <img id="img5" src="..." class="card-img-top" alt="...">
+          <img id="img5" src="" class="card-img-top" alt="...">
           <div class="card-body">
             <p id="temp5" class="card-text"></p>
             <p id="hum5" class="card-text"></p>
