--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <form>
           <div class="form-group">
             <h6 id="searchLabel">Search for a city name</h6>
-            <input type="text" placeholder="eg. Atlanta" onkeydown="uniKeyCode(event)" id="citySearch"
+            <input type="text" placeholder="eg. Atlanta" onkeydown="event" id="citySearch"
               aria-describedby="citySearch">
             <button type="submit" id="submitButton" form="form1" value="Submit">Search <svg width="1em" height="1em"
                 viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
